# ai-journey

./: .gitignore  README.md  pyproject.toml
notebooks/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.dataset.txt  05.dicts.json  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  20.ipynb  21.ipynb
